# object-detection-analysis

./: .gitignore  README.md  analysis_config.yaml  classify_train.ipynb  pyproject.toml  sandbox.ipynb
notebooks/: classify_train.ipynb  sandbox.ipynb
src/object_detection_analysis/: __init__.py  __main__.py  analysis.py  classifiers.py  ctx_data.py  sandbox.ipynb  tasks.py
src/object_detection_analysis/classifiers/: __init__.py  base.py  cnn_fc.py  common.py  feature_extract.py  knn.py  mlp.py  svm.py  training.py
src/object_detection_analysis/tasks/: __init__.py  area_occupation.py  base.py  color_space.py  count_objects.py  count_validate.py  object_classification.py  shape_properties.py
